--- a/dashboard/requirements.txt
+++ b/dashboard/requirements.txt
@@ -3,4 +3,5 @@ python-dotenv==1.0.1
 requests==2.31.0
 Flask-Session==0.6.0
 Werkzeug==3.0.1
-gunicorn==21.2.0 
+gunicorn==21.2.0
+whitenoise==6.6.0 
