Update deployment configuration for Render

--- a/dashboard/render.yaml
+++ b/dashboard/render.yaml
@@ -2,8 +2,11 @@ services:
   - type: web
     name: wispbot-dashboard
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
+    buildCommand: |
+      python -m pip install --upgrade pip
+      pip install -r requirements.txt
+    startCommand: |
+      python -m gunicorn app:app --bind 0.0.0.0:$PORT
     envVars:
       - key: FLASK_SECRET_KEY
         generateValue: true
@@ -14,4 +17,6 @@ services:
       - key: DISCORD_REDIRECT_URI
         value: https://wispbot.site/callback
       - key: PORT
-        value: 10000 
+        value: 10000
+      - key: PYTHON_VERSION
+        value: 3.10.0 
