--- a/dashboard/requirements.txt
+++ b/dashboard/requirements.txt
@@ -8,4 +8,6 @@ whitenoise==6.6.0
 click==8.1.7
 itsdangerous==2.1.2
 Jinja2==3.1.3
-MarkupSafe==2.1.5 
+MarkupSafe==2.1.5
+discord.py==2.3.2
+aiohttp==3.9.3 
