--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-discord.py==2.3.2
-python-dotenv==1.0.0
-Pillow==10.2.0
-aiohttp==3.9.3 
+discord.py>=2.0.0
+python-dotenv>=0.19.0
+flask>=2.0.0
+Pillow>=8.0.0
+aiohttp>=3.8.0
+requests>=2.26.0 
